fix: Cumulative score align

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -80,8 +80,9 @@
     }
 
     & .cum-score {
-      font-size: 0.8em;
       margin: -3px 0 0 2px;
+      text-align: left;
+      font-size: 0.8em;
       opacity: 0.4;
     }
   }
